// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`help > help correct match 1`] = `
"Here is the description
translate text to another language"
`;

exports[`help > help vague match 1`] = `"Did you mean 'translate'? Try \\"help translate\\""`;

exports[`translate > eliza tl|translate 1`] = `
"translate: missing translation context. example: \\"tl こんにちは世界\\"
help: What do you need help with? If you are asking for a command, try \\"help <command name>\\""
`;

exports[`translate > forgot colon 1`] = `
"translated from Spanish; Castilian to English:
\\"little crazy japanese\\"
> 'japanese' seems like a language name. Did you forget a colon? ex) translate japanese: poco loco"
`;

exports[`translate > natural syntax 1`] = `
"translated from Spanish; Castilian to English:
\\"to japanese: little crazy\\""
`;

exports[`translate > no colon required 1`] = `
"translated from Spanish; Castilian to English:
\\"little crazy\\""
`;

exports[`translate > tl shorthand 1`] = `
"translated from French to English:
\\"Good morning sir\\""
`;

exports[`translate > translate syntax 1`] = `
"translated from Spanish; Castilian to Japanese:
\\"ちょっとおかしい\\""
`;
